Fix arrows display on mobile

--- a/theme/less/luxembourg.less
+++ b/theme/less/luxembourg.less
@@ -191,4 +191,9 @@ h2 {
         position: absolute;
         right: 0;
     }
+
+    // Fleches gros bouttons rouges plus à droite
+    .btn-venti:after {
+        right: calc(1.5rem - 22px);
+    }
 }
